--- a/MINI_PROJECT_6.ipynb
+++ b/MINI_PROJECT_6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPby57za1ZIQPf2EYUbHyEZ",
+      "authorship_tag": "ABX9TyMvlRT8H772rfojnV3wWz09",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -473,6 +473,47 @@
           "name": "stdout",
           "text": [
             "In the second half of 2015, 11 countries had one or more 'Cumulative number of confirmed Ebola cases'.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "source": [
+        "filtered_df = df[df['Indicator'] == 'Cumulative number of confirmed Ebola cases']\n",
+        "# Access the column using its actual name 'value' (lowercase 'v')\n",
+        "country_totals = filtered_df.groupby('Country')['value'].sum().reset_index()\n",
+        "top_10_countries = country_totals.sort_values(by=['value'], ascending=False).head(10) #Also change this line since we renamed value\n",
+        "top_10_countries['Rank'] = range(1, 11)\n",
+        "print(tabulate(top_10_countries, headers='keys', tablefmt='psql'))"
+      ],
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5UXJJ3opAZO8",
+        "outputId": "3c86f084-9efb-4b10-c67d-a5a33cc0245f"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----+--------------------------+------------------+--------+\n",
+            "|    | Country                  |            value |   Rank |\n",
+            "|----+--------------------------+------------------+--------|\n",
+            "|  8 | Sierra Leone             |      2.04187e+06 |      1 |\n",
+            "|  3 | Liberia                  | 768079           |      2 |\n",
+            "|  0 | Guinea                   | 749622           |      3 |\n",
+            "|  6 | Nigeria                  |   4840           |      4 |\n",
+            "|  5 | Mali                     |   1658           |      5 |\n",
+            "| 11 | United States of America |    967           |      6 |\n",
+            "|  4 | Liberia 2                |    657           |      7 |\n",
+            "|  7 | Senegal                  |    254           |      8 |\n",
+            "|  9 | Spain                    |    243           |      9 |\n",
+            "| 10 | United Kingdom           |    221           |     10 |\n",
+            "+----+--------------------------+------------------+--------+\n"
           ]
         }
       ]
